--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <main style="height: 2000px;">
-        <!-- ===header=== -->
-        <header class="header">
+    <main>
+        <!-- header -->
+        <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
                     <!-- img -->
@@ -40,7 +40,11 @@
                         <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
                 </nav>
-
+            </div>
+        </header>
+        <!-- ===Hero=== -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -56,7 +60,7 @@
                         alt="Discover a place you'll love to live.">
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- ==Client== -->
         <div class="client">
