--- a/index.html
+++ b/index.html
@@ -34,20 +34,28 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 
 <body>
 
-    <!-- header -->
+    <!-- header PC-->
     <header class="fixed-header">
         <div class="content">
             <nav class="navbar">
+                <!-- tablet & mobie menu -->
+                <label for="menu__checkbox" class="toggle-menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                        <path fill="" #666
+                            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                    </svg>
+                </label>
                 <!-- img -->
-                <a href="#" class="/">
-                    <img src="./assets/img/logo.svg" alt="Besnik">
+                <a href="#">
+                    <img src="./assets/img/logo.svg" alt="Besnik" class="logo__header">
                 </a>
                 <!-- navigation-->
-                <ul>
+                <ul id="pc-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#feature">Features</a></li>
@@ -60,6 +68,28 @@
                     <a href="#!" class="btn action-btn">Sign up</a>
                 </div>
             </nav>
+        </div>
+    </header>
+
+    <header class="mobile__header">
+        <input type="checkbox" id="menu__checkbox" class="menu__checkbox" hidden>
+        <!-- overlay -->
+        <label for="menu__checkbox" class="menu__overlay"></label>
+        <!-- menu- contnet -->
+        <div class="menu__drawer">
+            <a href="#">
+                <img src="./assets/img/logo.svg" alt="Besnik">
+            </a>
+            <!-- navigation-->
+            <ul id="mobile_nav">
+
+            </ul>
+            <script>
+                const pcNav = document.querySelector('#pc-nav')
+                const mobieNav = document.querySelector('#mobile-nav')
+                // copy from Pc nav ->Nav mobile
+                mobile_nav.innerHTML = pcNav.innerHTML;
+            </script>
         </div>
     </header>
     <main>
@@ -94,7 +124,7 @@
                 </div>
                 <div class="row row-desc">
                     <p class="desc">More than 45,000+ companies trust besnik</p>
-                    <p class="desc">5 Star Ratings (2k+ Review)</p>
+                    <p class="desc hiden-on-mobile">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="row row-img">
                     <img src="./assets/img/client-1.svg" alt="Client1">
@@ -117,7 +147,7 @@
                 <!-- List-guide -->
                 <ul class="list-guide">
                     <li class="guide-item">
-                        <img src="./assets/img/buyer.svg" alt="Buyer" class="icon">
+                        <img src="./assets/img/buyer.svg" alt="Buyer" class="icon icon__on-moblile">
                         <h3 class="title">Buyer Guides</h3>
                         <a href="#!" class="link">
                             <span>How to buy</span>
@@ -155,7 +185,7 @@
                     <h2 class="sub-title">Featured Properties</h2>
                     <div class="row">
                         <p class="desc">Everything you need to know when you're looking</p>
-                        <a href="#!" class="link">
+                        <a href="#!" class="link hidden__on--monlie">
                             <span>View All Properties</span>
                             <img src="./assets/img/arrow-right.svg" alt="arrow-right" class="arrow">
                         </a>
@@ -231,13 +261,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <a href="#!" class="link show__on--mobile">
+                        <span>View All Properties</span>
+                        <img src="./assets/img/arrow-right.svg" alt="arrow-right" class="arrow">
+                    </a>
                 </div>
             </div>
         </div>
         <!-- Stats -->
         <div id="resources" class="stats">
             <div class="content">
-                <div class="row">
+                <div class="row row__stats">
                     <div class="img-block">
                         <img src="./assets/img/stats-img.jpg" alt="You’ve found a neighborhood you love." class="image">
                         <!-- trend -->
